# mcr-runtime

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  G2_ARCHITECTURE_BLUEPRINT.md  LICENSE  README.md  RUNTIME_STATE.md  RUN_TESTS.md  mcr5h_driver.sh  pyproject.toml  tick.sh
AUDIT/: README.md  snapshot_validator.py
ORCHESTRATOR/: README.md  dispatch.md  inbox.md  orchestrator.py  reports.md  tasks.json
archive/: analyze.py  benchmark_memory.py  drift.py  long_run_benchmark.py  profile_memory.py  semantic_formation.py  semantic_lesion_v16.py  semantic_necessity_v17.py  stability.py  stability_test.py  validate_stability.py
docs/: ARCHITECTURE.md  ARCHITECTURE_MAP.md  BOUNDED_PROPERTY.md  CORE_REWRITE_BASELINE_v0.10.md  CORE_REWRITE_PLAN_v0.10.md  DEMO_WALKTHROUGH.md  DIRECTORY_STRUCTURE.md  EXTERNAL_VALIDATION.md  FAQ.md  GETTING_STARTED.md  INTRODUCTION.md  KNOWN_ISSUES.md  MCR_COGNITIVE_OS_V0_2_PLAN.md  PACKAGING.md  PROJECT_OVERVIEW.md  QUICK_START.md  REFERENCE_RESEARCH_COGNITIVE_OS.md  RELEASES.md  ROADMAP.md  RUN_REPRODUCIBILITY.md  SNAPSHOT_DISCIPLINE.md  STABLE_VS_EXPERIMENTAL.md  long_run_report_v1.md  terminal_ownership.md
examples/: hermes_bridge_demo.py  library_usage.py  minimal_mcr.py  quickstart.py  replay_verification_demo.py
experimental/: INDEX.md  PHASE2_FINAL_REPORT.md  chaos_experiment.py  debug_pre2.py  debug_pre3.py  debug_pre4.py  debug_pre5.py  debug_pre_gc.py  recovery_test.py  semantic_abstraction_v18.py  semantic_diagnostic.py  semantic_long_horizon.py  semantic_necessity_v19.py  semantic_routing.py  semantic_schema_adaptation.py  (+3 more)
(+551 files in other folders)
