[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcr-runtime"
version = "0.9.5"
description = "Replayable memory runtime for long-running AI agents."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Mini-0618"}
]
keywords = [
    "ai-agent",
    "memory",
    "event-sourcing",
    "wal",
    "replay",
    "runtime",
    "observability",
    "agent-memory"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools]
packages = ["runtime"]

[tool.pytest.ini_options]
testpaths = ["tests"]